namespace_template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${namespace_name}
  labels:
    name: ${namespace_name}
