pod_template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ${pod_name}
  namespace: ${namespace}
  labels:
    app: ubuntu
    unique_label: "${namespace}-${pod_name}-${timestamp}"
spec:
  containers:
  - name: ubuntu-container
    image: busybox
    command: ["sleep", "3600"]
