hoeny-combined.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cowrie
  labels:
    app.kubernetes.io/name: cowrie
    app.kubernetes.io/instance: cowrie-abcxzy
    app.kubernetes.io/component: honeypot
    app.kubernetes.io/part-of: cowrie
spec:
  volumes:
    - name: cowrie-var
      emptyDir: {}
    - name: cowrie-etc
      emptyDir: {}
  containers:
    - name: cowrie
      image: cowrie/cowrie:latest
      imagePullPolicy: Always
      securityContext:
        runAsUser: 999
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - all
      ports:
        - name: ssh-port
          containerPort: 2222
        - name: telnet-port
          containerPort: 2223
---
kind: Service
apiVersion: v1
metadata:
  name: cowrie
  labels:
    app.kubernetes.io/name: cowrie
    app.kubernetes.io/instance: cowrie-abcxzy
    app.kubernetes.io/component: honeypot
    app.kubernetes.io/part-of: cowrie
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: cowrie
  ports:
    - protocol: TCP
      name: ssh-honeypot
      nodePort: 32222
      port: 2222
      targetPort: 2222
    - protocol: TCP
      name: telnet-honeypot
      nodePort: 32223
      port: 2223
      targetPort: 2223
