expose_internet_access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-access
  namespace: webapp
spec:
  podSelector:
    matchLabels:
      app: webapp # This targets pods with the label app=webapp
  policyTypes:
    - Egress
  egress:
    - {} # This allows egress traffic to any destination
