expose_nodeport.yaml
# apiVersion: networking.k8s.io/v1 
# kind: NetworkPolicy
# metadata:
#   name: "allow-nodeport-access"
#   namespace: webapp
# spec:
#   endpointSelector:
#     matchLabels:
#       kubernetes.io/metadata.name : webapp
#   ingress:
#   - fromEntities:
#     - world
#     toPorts:
#     - ports:
#       - port: "8081"
#         protocol: TCP
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nodeport-access
  namespace: webapp
spec:
  podSelector:
    matchLabels:
      app: webapp # Assuming you want to match pods with label app=webapp
  policyTypes:
  - Ingress
  ingress:
  - from: # This can be left empty to allow access from any source
    ports:
    - protocol: TCP
      port: 8081
